---------------------------------------------------------------------------------------------------
Version: 2.2.6
Date: ????
  Changes:
    - Update dependency version on base to 2.0.35.
---------------------------------------------------------------------------------------------------
Version: 2.2.5
Date: 2025-03-30
  Bugfixes:
    - Get rid of spurious "Not connected to an LTN Train Stop input" left over from pre-port remote
      control capabilities.
    - Fix crash and provide feedback when trying to set signals that collide with existing signals.
  Features:
    - Add support for the ltn-fuel-station signal
---------------------------------------------------------------------------------------------------
Version: 2.2.4
Date: 2025-02-23
  Bugfixes:
    - Crash when pasting old (1.1) blueprints with LTN combinator
    - Fix building while holding blueprint books.  Some corner cases may not work properly if you
      not running Factorio 2.0.35 or later.
    - Fix crash when setting for explicit defaults is enabled.
  Changes:
    - Removed low-res graphics
---------------------------------------------------------------------------------------------------
Version: 2.2.3
Date: 2025-02-15
  Bugfixes:
    - Crash when updating network descriptions
    - Temporary workaround to avoid crashes when building blueprints while holding a blueprint book.
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2025-02-14
  Bugfixes:
    - More crashes dealing with blueprints from the library
    - Typo in a mod-setting description
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2025-02-14
  Bugfixes:
    - Fixed crash when working with blueprints / copy-paste
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2025-02-13
  Changes:
    - Initial port to Factorio 2.0