@@ -8,9 +8,9 @@
     "homepage": "https://github.com/kryojenik/LTN_Combinator_Modernized",
     "factorio_version": "2.0",
     "dependencies": [
-        "base >= 2.0.35",
-        "flib >= 0.16.2",
-        "LogisticTrainNetwork >= 2.0.3"
+        "base >= 2.0.72",
+        "flib >= 0.16.5",
+        "LogisticTrainNetwork >= 2.5.1"
     ],
     "package": {
         "git_publish_branch": "main",
